# gphotos-fav-be

./: .gitignore  README.md  pyproject.toml
src/: server.py
src/resources/authentication/: dependencies.py  routes.py
src/resources/photos/: clients.py  controller.py  dependencies.py  models.py  routes.py  services.py
